# devolv

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  test-devolv-policy.json
.github/: policytest.yml
.github/workflows/: test-devolv-action.yml  test-devolv-action.yml.yml  test.yml
devolv/: __init__.py  cli.py
devolv/drift/: __init__.py  aws_fetcher.py  cli.py  comparator.py  file_loader.py  github_approvals.py  issues.py  report.py  utils.py
devolv/iam/validator/: cli.py  core.py  folder.py  rules.py
docs/: _config.yml  drift.md  index.md  roadmap.md  validator.md
sample_policies/: policy_1.json  policy_10.json  policy_2.json  policy_3.json  policy_4.json  policy_5.json  policy_6.json  policy_7.json  policy_8.json  policy_9.json  test.json
tests/: test_cli.py  test_drift.py  test_folder_validator.py  test_validator.py
tests/devolv_validator/: test_validator.py
