[project]
name = "devolv"
version = "0.1.2"
description = "Modular DevOps Toolkit"
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "Devolv Dev", email = "devolv.dev@gmail.com" }
]

keywords = ["devops", "aws", "iam", "security", "cli", "toolkit"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]


[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
devolv = "devolv.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
